Z-index fix

--- a/styles/gameItems.css
+++ b/styles/gameItems.css
@@ -1,6 +1,5 @@
 /* game buttons */
 .clicker-button {
-  z-index: 100;
   width: 50px;
   height: 50px;
   background-image: url(../assets/images/bomber1.png);
@@ -18,7 +17,6 @@
 }
 
 .clicker-button-clicked {
-  z-index: 100;
   width: 100px;
   height: 100px;
   background-image: url(../assets/images/boom-effect.png);
